Delete configuration autoloader

--- a/etc/tlc.ini
+++ b/etc/tlc.ini
@@ -2,11 +2,6 @@
 [tlc]
 env = dev
 
-[autoloader]
-path = ROOT_DIR/lib/Tlc/Autoloader/Autoloader.class.php
-class = \Tlc\Autoloader\Autoloader
-method = registerAutoload
-
 [exception_handler]
 class = \Tlc\ExceptionHandler\ExceptionHandler
 method = catchException
@@ -16,4 +11,4 @@ class = \Tlc\ErrorHandler\ErrorHandler
 method = catchError
 
 [logger]
-file = ROOT_DIR"/var/log/tlc.log"
+file = ROOT_DIR"var/log/core.log"
