Delete first backslash from class name

--- a/etc/tlc.ini
+++ b/etc/tlc.ini
@@ -3,11 +3,11 @@
 env = dev
 
 [exception_handler]
-class = \Tlc\ExceptionHandler\ExceptionHandler
+class = Tlc\ExceptionHandler\ExceptionHandler
 method = catchException
 
 [error_handler]
-class = \Tlc\ErrorHandler\ErrorHandler
+class = Tlc\ErrorHandler\ErrorHandler
 method = catchError
 
 [logger]
