Add cache configuration

--- a/etc/tlc.ini
+++ b/etc/tlc.ini
@@ -10,5 +10,11 @@ method = catchException
 class = Tlc\ErrorHandler\ErrorHandler
 method = catchError
 
+[cache]
+enable = true
+engine = file
+ttl = 3600
+file[path] = ROOT_DIR"var/cache/core"
+
 [logger]
 file = ROOT_DIR"var/log/core.log"
