Add call to plugins

--- a/app/Test/etc/routing.ini
+++ b/app/Test/etc/routing.ini
@@ -2,5 +2,13 @@
 pattern = "/Test ([a-z]+) ([a-z]+)"
 controller = "\Test\Controllers\Main"
 method = "index"
+format = "json"
+
+; Plugins call on precall
 precall[] = "\PlugTest\Cache"
+
+; Plugins call on postcalls
 postcall[] = "\PlugTest\Cache"
+postcall[] = "\PlugTest\Format"
+postcall[] = "\PlugTest\Output"
+postcall[] = "\PlugTest\Generate"
