Add config database and plugin generate

--- a/app/Test/etc/config.ini
+++ b/app/Test/etc/config.ini
@@ -1,3 +1,16 @@
 ; Configuration file of Test
 [logger]
-file = ROOT_DIR"var/log/test.log"
+engine = file
+enable = true
+log_level = DEBUG
+file[file] = ROOT_DIR"var/log/test.log"
+
+[database]
+host = localhost
+dbname = test
+user = root
+password = test
+
+[generate]
+dir = ROOT_DIR"var/data/"
+alias["test:home:([a-z]+)"] = "index-$1.html"
