Rename configuration file

--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -1,5 +1,5 @@
 ; Global configuration file
-[tlc]
+[global]
 env = dev
 
 [exception_handler]
@@ -13,8 +13,12 @@ method = catchError
 [cache]
 enable = true
 engine = file
-ttl = 3600
+file[ttl] = 5
 file[path] = ROOT_DIR"var/cache/core"
 
 [logger]
-file = ROOT_DIR"var/log/core.log"
+engine = file
+enable = true
+output = true
+; log_level = DEBUG
+file[file] = ROOT_DIR"var/log/core.log"
