Change configuration app

--- a/app/Test/etc/config.ini
+++ b/app/Test/etc/config.ini
@@ -1,9 +1,9 @@
 ; Configuration file of Test
 [logger]
-engine = file
-enable = true
-log_level = DEBUG
-file[file] = ROOT_DIR"var/log/test.log"
+; engine = file
+; enable = true
+; log_level = DEBUG
+; file[file] = ROOT_DIR"var/log/test.log"
 
 [database]
 host = localhost
