Change Tlc by Telco

--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -3,11 +3,11 @@
 env = dev
 
 [exception_handler]
-class = Tlc\ExceptionHandler\ExceptionHandler
+class = Telco\ExceptionHandler\ExceptionHandler
 method = catchException
 
 [error_handler]
-class = Tlc\ErrorHandler\ErrorHandler
+class = Telco\ErrorHandler\ErrorHandler
 method = catchError
 
 [cache]
