--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -2,23 +2,63 @@
 [global]
 env = dev
 
+; Set class and method ExceptionHandler
 [exception_handler]
 class = Telco\ExceptionHandler\ExceptionHandler
 method = catchException
 
+; Set class and method ErrorHandler
 [error_handler]
 class = Telco\ErrorHandler\ErrorHandler
 method = catchError
 
+; Configuration connection to database
+;
+; host: (string) Hostname
+; dbname: (string) Name of the database
+; user: (string) User for connection
+; password: (string) Password for connection
+[db]
+host = localhost
+dbname = test
+user = root
+password = test
+
+; Configuration Cache
+;
+; enable: (true|false) Enable cache
+; driver: (file|memcache) Driver used
+;
+; file[ttl]: (int) Time to live
+; file[path]: (string) Directory to create cache files
+;
+; memcache[ttl]: (int) Time to live
+; memcache[host]: (string) Ip or hostname of memcached
+; memcache[port]: (int) Port used for memcached
 [cache]
 enable = true
-engine = file
+driver = file
 file[ttl] = 5
 file[path] = ROOT_DIR"var/cache/core"
 
+; Configuration Logger
+;
+; enable: (true|false) Enable logger
+; driver: (file) Driver used
+; output: (true|false) Write message to stdout
+;
+; file[file]: File to write log
 [logger]
-engine = file
 enable = true
+driver = file
 output = true
-; log_level = DEBUG
 file[file] = ROOT_DIR"var/log/core.log"
+
+; Configuration generate class
+; This class is used to generate file on request
+;
+; dir: (string) Directory to generate file
+; alias[pattern]: filename generated
+[generate]
+dir = ROOT_DIR"var/data/"
+alias["test:home:([a-z]+)"] = "index-$1.html"
