--- a/app/Test/etc/routing.ini
+++ b/app/Test/etc/routing.ini
@@ -1,3 +1,9 @@
+[redirect]
+pattern = "/Test/redirect"
+controller = "\Test\Controllers\Main"
+method = "redirect"
+format = "json"
+
 [home]
 pattern = "/Test ([a-z]+) ([a-z]+)"
 controller = "\Test\Controllers\Main"
