--- a/app/Test/etc/config.ini
+++ b/app/Test/etc/config.ini
@@ -4,3 +4,20 @@ host = localhost
 dbname = test
 user = root
 password = test
+
+[routing]
+redirect[pattern] = "/Test/redirect"
+redirect[controller] = "\Test\Controllers\Main"
+redirect[method] = "redirect"
+redirect[format] = "json"
+
+home[pattern] = "/Test ([a-z]+) ([a-z]+)"
+home[controller] = "\Test\Controllers\Main"
+home[method] = "index"
+home[format] = "json"
+
+; Plugins call on precall
+home[precall] = "\PlugTest\Cache"
+
+; Plugins call on postcalls
+home[postcall] = "\PlugTest\Format;\PlugTest\Cache;\PlugTest\Generate;\PlugTest\Output"
