Rename Folder PlugTest by Plugin

--- a/app/Test/etc/config.ini
+++ b/app/Test/etc/config.ini
@@ -17,7 +17,7 @@ home[method] = "index"
 home[format] = "json"
 
 ; Plugins call on precall
-home[precall] = "\PlugTest\Cache"
+home[precall] = "\Plugin\Cache"
 
 ; Plugins call on postcalls
-home[postcall] = "\PlugTest\Format;\PlugTest\Cache;\PlugTest\Generate;\PlugTest\Output"
+home[postcall] = "\Plugin\Format;\Plugin\Cache;\Plugin\Generate;\Plugin\Output"
