Add comments to configuration files

--- a/etc/routing.ini
+++ b/etc/routing.ini
@@ -1,9 +1,14 @@
-; List routing file application
-[route]
+; List route apps
+;
+; route_name: Route name
+; route_name[type]: CLI|CGI
+; route_name[prefix]: Prefix pf the route
+; route_name[app]: App to launch with this prefix
+[route_apps]
 test[type] = "cli"
-test[prefix] = "/Test"
-test[routing] = ROOT_DIR"app/Test/etc/routing.ini"
+test[prefix] = "/Test" 
+test[app] = "Test"
 
 test2[type] = "cgi"
 test2[prefix] = "/test"
-test2[routing] = ROOT_DIR"app/Test/etc/routing.ini"
+test2[app] = "Test"
