--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -20,9 +20,9 @@ method = catchError
 ; password: (string) Password for connection
 [db]
 host = localhost
-dbname = *****
-user = *****
-password = *****
+dbname = test
+user = root
+password = test
 
 ; Configuration Cache
 ;
