Add directive driver to Component DB

--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -19,6 +19,7 @@ method = catchError
 ; user: (string) User for connection
 ; password: (string) Password for connection
 [db]
+driver = pdo
 host = localhost
 dbname = test
 user = root
