Add test plugin View

--- a/app/Test/etc/config.ini
+++ b/app/Test/etc/config.ini
@@ -21,4 +21,5 @@ home[format] = "json"
 home[precall] = "Plugin\Cache"
 
 ; Plugins call on postcalls
-home[postcall] = "Plugin\Format;Plugin\Cache;Plugin\Generate;Plugin\Output"
+home[postcall] = "Plugin\View;Plugin\Cache;Plugin\Generate;Plugin\Output"
+; home[postcall] = "Plugin\Format;Plugin\Cache;Plugin\Generate;Plugin\Output"
