Add view configuration

--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -55,6 +55,19 @@ driver = file
 output = true
 file[file] = ROOT_DIR"var/log/core.log"
 
+; Configuration View
+;
+; driver: (smarty) Driver used
+; default_template: Default template for fetch and display
+;
+; smarty[template_dir]: (string )Directory to search templates
+; smarty[compile_dir]: (string) Directory to compile templates
+[view]
+driver = smarty
+default_template = "main.tpl"
+smarty[template_dir] = ROOT_DIR"templates"
+smarty[compile_dir] = ROOT_DIR"var/cache/templates_c"
+
 ; Configuration generate class
 ; This class is used to generate file on request
 ;
