Rename folder templates to tpl and move to app

--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -65,8 +65,8 @@ file[file] = ROOT_DIR"var/log/core.log"
 [view]
 driver = smarty
 default_template = "main.tpl"
-smarty[template_dir] = ROOT_DIR"templates"
-smarty[compile_dir] = ROOT_DIR"var/cache/templates_c"
+smarty[template_dir] = ROOT_DIR"tpl"
+smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
 
 ; Configuration generate class
 ; This class is used to generate file on request
