Change routes apps

--- a/etc/routing.ini
+++ b/etc/routing.ini
@@ -5,10 +5,10 @@
 ; route_name[prefix]: Prefix pf the route
 ; route_name[app]: App to launch with this prefix
 [route_apps]
-test[type] = "cli"
-test[prefix] = "/Test" 
-test[app] = "Test"
+example_cli[type] = "cli"
+example_cli[prefix] = "/Example" 
+example_cli[app] = "Example"
 
-test2[type] = "cgi"
-test2[prefix] = "/test"
-test2[app] = "Test"
+example_cgi[type] = "cgi"
+example_cgi[prefix] = "/example"
+example_cgi[app] = "Example"
