--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -6,33 +6,50 @@ dbname = test
 user = root
 password = test
 
+; Overwrite Smaarty configuration
+[view]
+driver = smarty
+default_template = "main.tpl"
+smarty[template_dir] = ROOT_DIR"app/Example/tpl"
+smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
+
+; Add alias to generate component
+[generate]
+dir = ROOT_DIR"var/data/"
+alias["home"] = "index.html"
+
 [routing]
-; -----------------------------------------
-; Example of a route with redirect
+; ------------------------------------------------
+; Example of a route with redirect               ;
+; ------------------------------------------------
 redirect[pattern] = "/Example/redirect"
-redirect[controller] = "Test\Controllers\Main"
+redirect[controller] = "Example\Controllers\Main"
 redirect[method] = "redirect"
 redirect[format] = "json"
 
-; -----------------------------------------
-; Example of a route with generate page
+; ------------------------------------------------
+; Example of a route with generate page          ;
+; ------------------------------------------------
 generate_home[pattern] = "/Example/generate ([a-z]+) ([a-z]+)"
-generate_home[controller] = "Test\Controllers\Main"
-generate_home[method] = "index"
-generate_home[format] = "json"
-
-; Plugins call on postcalls
+generate_home[controller] = "Example\Controllers\Main"
+generate_home[method] = "generateIndex"
 generate_home[postcall] = "Plugin\View;Plugin\Generate"
 
-; -----------------------------------------
-; Examples of a route to home
+; ------------------------------------------------
+; Examples of a route to home                    ;
+; ------------------------------------------------
 home[pattern] = "/Example/home ([a-z]+) ([a-z]+)"
-home[controller] = "Test\Controllers\Main"
+home[controller] = "Example\Controllers\Main"
 home[method] = "index"
-home[format] = "json"
-
-; Plugins call on precall
 home[precall] = "Plugin\Cache"
-
-; Plugins call on postcalls
 home[postcall] = "Plugin\View;Plugin\Cache;Plugin\Output"
+
+; ------------------------------------------------
+; Examples of a route to home with response json ;
+; ------------------------------------------------
+home_json[pattern] = "/Example/home/json ([a-z]+) ([a-z]+)"
+home_json[controller] = "Example\Controllers\Main"
+home_json[method] = "index"
+home_json[format] = "json"
+home_json[precall] = "Plugin\Cache"
+home_json[postcall] = "Plugin\Format;Plugin\Cache;Plugin\Output"
