Add a route example with a call to generate plugin

--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -6,7 +6,7 @@ dbname = test
 user = root
 password = test
 
-; Overwrite Smaarty configuration
+; Overwrite Smarty configuration
 [view]
 driver = smarty
 default_template = "main.tpl"
@@ -17,6 +17,7 @@ smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
 [generate]
 dir = ROOT_DIR"var/data/"
 alias["home"] = "index.html"
+alias["list"] = "list.html"
 
 [routing]
 ; ------------------------------------------------
@@ -34,6 +35,12 @@ generate_home[pattern] = "/Example/generate ([a-z]+) ([a-z]+)"
 generate_home[controller] = "Example\Controllers\Main"
 generate_home[method] = "generateIndex"
 generate_home[postcall] = "Plugin\View;Plugin\Generate"
+
+generate_list[pattern] = "/Example/generate list"
+generate_list[controller] = "Example\Controllers\Main"
+generate_list[method] = "generateList"
+generate_list[format] = "xml"
+generate_list[postcall] = "Plugin\Format;Plugin\Generate"
 
 ; ------------------------------------------------
 ; Examples of a route to home                    ;
