--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -2,22 +2,23 @@
 [global]
 env = dev
 
-; Set class and method ExceptionHandler
+; Set the class and the method of ExceptionHandler
 [exception_handler]
 class = Telco\ExceptionHandler\ExceptionHandler
 method = catchException
 
-; Set class and method ErrorHandler
+; Set the class and the method of ErrorHandler
 [error_handler]
 class = Telco\ErrorHandler\ErrorHandler
 method = catchError
 
 ; Configuration connection to database
 ;
+; driver: (pdo) Driver used
 ; host: (string) Hostname
 ; dbname: (string) Name of the database
-; user: (string) User for connection
-; password: (string) Password for connection
+; user: (string) User of the connection
+; password: (string) Password of the connection
 [db]
 driver = pdo
 host = localhost
@@ -75,4 +76,4 @@ smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
 ; alias[pattern]: filename generated
 [generate]
 dir = ROOT_DIR"var/data/"
-alias["test:home:([a-z]+)"] = "index-$1.html"
+; alias["test:home:([a-z]+)"] = "index-$1.html"
