--- a/etc/routing.ini
+++ b/etc/routing.ini
@@ -1,8 +1,8 @@
 ; List route apps
 ;
 ; route_name: Route name
-; route_name[type]: CLI|CGI
-; route_name[prefix]: Prefix pf the route
+; route_name[type]: (CLI|CGI)
+; route_name[prefix]: Prefix of the route
 ; route_name[app]: App to launch with this prefix
 [route_apps]
 example_cli[type] = "cli"
