Delete format from route

--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -26,7 +26,6 @@ alias["list"] = "list.html"
 redirect[pattern] = "/Example/redirect"
 redirect[controller] = "Example\Controllers\Main"
 redirect[method] = "redirect"
-redirect[format] = "json"
 
 ; ------------------------------------------------
 ; Example of a route with generate page          ;
@@ -39,8 +38,7 @@ generate_home[postcall] = "Plugin\View;Plugin\Generate"
 generate_list[pattern] = "/Example/generate list"
 generate_list[controller] = "Example\Controllers\Main"
 generate_list[method] = "generateList"
-generate_list[format] = "xml"
-generate_list[postcall] = "Plugin\Format;Plugin\Generate"
+generate_list[postcall][] = "Plugin\Format;Plugin\Generate"
 
 ; ------------------------------------------------
 ; Examples of a route to home                    ;
@@ -57,6 +55,5 @@ home[postcall] = "Plugin\View;Plugin\Cache;Plugin\Output"
 home_json[pattern] = "/Example/home/json ([a-z]+) ([a-z]+)"
 home_json[controller] = "Example\Controllers\Main"
 home_json[method] = "index"
-home_json[format] = "json"
 home_json[precall] = "Plugin\Cache"
 home_json[postcall] = "Plugin\Format;Plugin\Cache;Plugin\Output"
