Delete multi array

--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -38,7 +38,7 @@ generate_home[postcall] = "Plugin\View;Plugin\Generate"
 generate_list[pattern] = "/Example/generate list"
 generate_list[controller] = "Example\Controllers\Main"
 generate_list[method] = "generateList"
-generate_list[postcall][] = "Plugin\Format;Plugin\Generate"
+generate_list[postcall] = "Plugin\Format;Plugin\Generate"
 
 ; ------------------------------------------------
 ; Examples of a route to home                    ;
