Change password MySQL

--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -1,10 +1,10 @@
 ; Overwrite configuration database
 [db]
-driver = pdo
-host = localhost
-dbname = test
-user = root
-password = test
+driver = "pdo"
+host = "localhost"
+dbname = "test"
+user = "root"
+password = "Malaki16.gd"
 
 ; Overwrite Smarty configuration
 [view]
@@ -33,12 +33,12 @@ redirect[method] = "redirect"
 generate_home[pattern] = "/Example/generate ([a-z]+) ([a-z]+)"
 generate_home[controller] = "Example\Controllers\Main"
 generate_home[method] = "generateIndex"
-generate_home[postcall] = "Plugin\View;Plugin\Generate"
+generate_home[postcall] = "Plugin\View;Plugin\Generate;Plugin\Output"
 
 generate_list[pattern] = "/Example/generate list"
 generate_list[controller] = "Example\Controllers\Main"
 generate_list[method] = "generateList"
-generate_list[postcall] = "Plugin\Format;Plugin\Generate"
+generate_list[postcall] = "Plugin\Format;Plugin\Generate;Plugin\Output"
 
 ; ------------------------------------------------
 ; Examples of a route to home                    ;
