--- a/etc/routing.ini
+++ b/etc/routing.ini
@@ -10,5 +10,13 @@ example_cli[prefix] = "/Example"
 example_cli[app] = "Example"
 
 example_cgi[type] = "cgi"
-example_cgi[prefix] = "/example"
+example_cgi[prefix] = "/Example"
 example_cgi[app] = "Example"
+
+test_cgi[type] = "cgi"
+test_cgi[prefix] = "/Test"
+test_cgi[app] = "Test"
+
+test_cgi[type] = "cli"
+test_cgi[prefix] = "/Test"
+test_cgi[app] = "Test"
