Add memcache configuration

--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -39,9 +39,12 @@ password = test
 ; memcache[port]: (int) Port used for memcached
 [cache]
 enable = true
-driver = file
+driver = memcache
 file[ttl] = 5
 file[path] = ROOT_DIR"var/cache/core"
+memcache[ttl] = 5
+memcache[host] = 127.0.0.1
+memcache[port] = 11211
 
 ; Configuration Logger
 ;
