Add Redis configuration

--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -26,6 +26,18 @@ dbname = test
 user = root
 password = test
 
+; Configuration redis
+;
+; host: (string) Hostname
+; port(optional): (int) Port
+; timeout(optional): (float) Timeout connection (0 unlimited)
+; prefix(optional): (string) Prefix of keys
+[redis]
+host = localhost
+; port = 6379
+; timeout = 0
+; prefix = ''
+
 ; Configuration Cache
 ;
 ; enable: (true|false) Enable cache
