--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -28,6 +28,13 @@ redirect[controller] = "Example\Controllers\Main"
 redirect[method] = "redirect"
 
 ; ------------------------------------------------
+; Example of a route with redis               ;
+; ------------------------------------------------
+redirect[pattern] = "/Example/redis"
+redirect[controller] = "Example\Controllers\Main"
+redirect[method] = "testRedis"
+
+; ------------------------------------------------
 ; Example of a route with redirect               ;
 ; ------------------------------------------------
 daemon[pattern] = "/Example/daemon"
