Add default configuration Mail component

--- a/etc/telco.ini
+++ b/etc/telco.ini
@@ -84,6 +84,19 @@ default_template = "main.tpl"
 smarty[template_dir] = ROOT_DIR"tpl"
 smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
 
+; Configuration mail component
+; This class is used to send mail
+;
+; from[address]: (string) Default address from
+; from[name]: (string) Default name from
+; reply[address]: (string) Default address reply
+; reply[name]: (string) Default name reply
+; to[address]: (string) Default address to
+; to[name]: (string) Default name to
+[mail]
+from[address] = dievartg@gmail.com
+from[name] = Guillaume Dievart
+
 ; Configuration generate class
 ; This class is used to generate file on request
 ;
