--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -4,7 +4,7 @@ driver = "mysql"
 host = "localhost"
 dbname = "test"
 user = "root"
-password = "Malaki16.gd"
+password = "mypassword"
 
 ; Overwrite Smarty configuration
 [view]
@@ -26,6 +26,14 @@ alias["list"] = "list.html"
 redirect[pattern] = "/Example/redirect"
 redirect[controller] = "Example\Controllers\Main"
 redirect[method] = "redirect"
+
+seo[pattern] = "/Example/seo"
+seo[controller] = "Example\Controllers\Main"
+seo[method] = "insertSeo"
+
+seo_ckeck[pattern] = "/Example/checkSeo"
+seo_ckeck[controller] = "Example\Controllers\Main"
+seo_ckeck[method] = "checkSeo"
 
 ; ------------------------------------------------
 ; Example of a route with redis               ;
