apply zend standard

--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -13,6 +13,12 @@ default_template = "main.tpl"
 smarty[template_dir] = ROOT_DIR"app/Example/tpl"
 smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
 
+[cache]
+enable = true
+driver = file
+file[ttl] = 5
+file[path] = ROOT_DIR"var/cache/core"
+
 ; Add alias to generate component
 [generate]
 dir = ROOT_DIR"var/data/"
@@ -81,3 +87,12 @@ home_json[controller] = "Example\Controllers\Main"
 home_json[method] = "index"
 home_json[precall] = "Plugin\Cache"
 home_json[postcall] = "Plugin\Format;Plugin\Cache;Plugin\Output"
+
+; ------------------------------------------------
+; Examples of a route to
+; ------------------------------------------------
+home_json[pattern] = "/"
+home_json[controller] = "Example\Controllers\Main"
+home_json[method] = "index"
+home_json[precall] = "Plugin\Cache"
+home_json[postcall] = "Plugin\View;Plugin\Cache;Plugin\Output"
