apply zend convention

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -4,12 +4,12 @@ env = dev
 
 ; Set the class and the method of ExceptionHandler
 [exception_handler]
-class = Telco\ExceptionHandler\ExceptionHandler
+class = Telelab\ExceptionHandler\ExceptionHandler
 method = catchException
 
 ; Set the class and the method of ErrorHandler
 [error_handler]
-class = Telco\ErrorHandler\ErrorHandler
+class = Telelab\ErrorHandler\ErrorHandler
 method = catchError
 
 ; Configuration connection to database
