--- a/app/etc/_routing.ini
+++ b/app/etc/_routing.ini
@@ -1,7 +1,7 @@
 ; List route apps
 ;
 ; route_name: Route name
-; route_name[type]: (CLI|CGI)
+; route_name[type]: (CLI|CGI) -- optional
 ; route_name[prefix]: Prefix of the route
 ; route_name[app]: App to launch with this prefix
 [route_apps]
