--- a/app/etc/_routing.ini
+++ b/app/etc/_routing.ini
@@ -1,9 +1,10 @@
 ; List route apps
 ;
 ; route_name: Route name
-; route_name[type]: (CLI|CGI) -- optional
+; route_name[type]: (CLI|CGI...) -- optional
 ; route_name[prefix]: Prefix of the route
 ; route_name[app]: App to launch with this prefix
+; route_name[path]: Path to application
 [route_apps]
 example_cli[type] = "cli"
 example_cli[prefix] = "/Example"
@@ -12,3 +13,4 @@ example_cli[app] = "Example"
 example_cgi[type] = "cgi"
 example_cgi[prefix] = "/Example"
 example_cgi[app] = "Example"
+example_cgi[path] = "/path/to/app"
