add directive host in routing

--- a/app/etc/_routing.ini
+++ b/app/etc/_routing.ini
@@ -2,11 +2,13 @@
 ;
 ; route_name: Route name
 ; route_name[type]: (CLI|CGI...) -- optional
+; route_name[host]: Hostname of application -- optional
 ; route_name[prefix]: Prefix of the route
 ; route_name[app]: App to launch with this prefix
-; route_name[path]: Path to application
+; route_name[path]: Path to application -- optional
 [route_apps]
 example_cli[type] = "cli"
+example_cli[host] = "localhost"
 example_cli[prefix] = "/Example"
 example_cli[app] = "Example"
 
