--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -1,10 +1,10 @@
 ; Overwrite configuration database
 [db]
 driver = "mysql"
-host = "localhost"
+host = "192.168.0.163"
 dbname = "test"
 user = "root"
-password = "mypassword"
+password = "Malaki16.gd"
 
 ; Overwrite Smarty configuration
 [view]
