change address gmail to telemaque

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -94,7 +94,7 @@ smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
 ; to[address]: (string) Default address to
 ; to[name]: (string) Default name to
 [mail]
-from[address] = dievartg@gmail.com
+from[address] = g.dievart@telemaque.fr
 from[name] = Guillaume Dievart
 
 ; Configuration generate class
