add firewall plugin

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -105,3 +105,14 @@ from[name] = Guillaume Dievart
 [generate]
 dir = ROOT_DIR"var/data/"
 ; alias["test:home:([a-z]+)"] = "index-$1.html"
+
+; Configuration firewall plugin
+; This plugin is used to check if user must be consult page
+;
+; redirect: (string) Route to redirect user if is not connected
+; redirect_type: (bg|fg) bg => Rest on same url, fg => Redirect url
+; route[]: List routes in firewall
+[firewall]
+redirect = /auth
+redirect_type = bg
+route[] = client_test
