change mail to mailer

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -84,18 +84,9 @@ default_template = "main.tpl"
 smarty[template_dir] = ROOT_DIR"tpl"
 smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
 
-; Configuration mail component
-; This class is used to send mail
-;
-; from[address]: (string) Default address from
-; from[name]: (string) Default name from
-; reply[address]: (string) Default address reply
-; reply[name]: (string) Default name reply
-; to[address]: (string) Default address to
-; to[name]: (string) Default name to
-[mail]
-from[address] = g.dievart@telemaque.fr
-from[name] = Guillaume Dievart
+; Configuration mailer component
+; This class is used to send mail with PHPMailer
+[mailer]
 
 ; Configuration generate class
 ; This class is used to generate file on request
