add mailer configuration example

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -86,7 +86,12 @@ smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
 
 ; Configuration mailer component
 ; This class is used to send mail with PHPMailer
+;
+; host_default: Host used by default
+; host_attachments: Host used with attachments
 [mailer]
+host_default = 212.234.169.1
+host_attachments = 91.209.191.90
 
 ; Configuration generate class
 ; This class is used to generate file on request
