--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -1,10 +1,10 @@
 ; Overwrite configuration database
 [db]
 driver = "mysql"
-host = "192.168.0.163"
+host = "127.0.0.1"
 dbname = "test"
 user = "root"
-password = "Malaki16.gd"
+password = "password"
 
 ; Overwrite Smarty configuration
 [view]
@@ -91,7 +91,7 @@ home_json[postcall] = "Plugin\Format;Plugin\Cache;Plugin\Output"
 ; ------------------------------------------------
 ; Examples of a route to
 ; ------------------------------------------------
-home_json[pattern] = "/"
+home_json[pattern] = "/Example"
 home_json[controller] = "Example\Controllers\Main"
 home_json[method] = "index"
 home_json[precall] = "Plugin\Cache"
