add default configuration of the file component

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -120,3 +120,11 @@ dir = ROOT_DIR"var/data/"
 redirect = /auth
 redirect_type = bg
 route[] = client_test
+
+; Configure File component
+;
+; uploaded_file[path]: Path to move uploaded file
+; uploaded_file[ext]: Extension available
+[file]
+uploaded_file[path] = ROOT_DIR"var/tmp/upload"
+uploaded_file[ext] = "png,jpeg,jpg"
