add log_level to section logger

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -71,12 +71,14 @@ uploaded_file[ext] = "ico,png,gif"
 ; enable: (true|false) Enable logger
 ; driver: (file) Driver used
 ; output: (true|false) Write message to stdout
+; log_level: (DEBUG|INFO|ERROR|CRIT) Write message if is more than log
 ;
 ; file[file]: File to write log
 [logger]
 enable = true
 driver = file
 output = true
+log_level = DEBUG
 file[file] = ROOT_DIR"var/log/core.log"
 
 ; Configuration View
