--- a/app/Example/etc/config.ini
+++ b/app/Example/etc/config.ini
@@ -11,21 +11,32 @@ password = "password"
 driver = smarty
 default_template = "main.tpl"
 smarty[template_dir] = ROOT_DIR"app/Example/tpl"
-smarty[compile_dir] = ROOT_DIR"var/cache/tpl_c"
+smarty[compile_dir] = ROOT_DIR"app/Example/var/cache/tpl_c"
 
 [cache]
 enable = true
 driver = file
 file[ttl] = 5
-file[path] = ROOT_DIR"var/cache/core"
+file[path] = ROOT_DIR"app/Example/var/cache/core"
 
 ; Add alias to generate component
 [generate]
-dir = ROOT_DIR"var/data/"
+dir = ROOT_DIR"app/Example/var/data/"
 alias["home"] = "index.html"
 alias["list"] = "list.html"
 
+; Default plugins call
+[plugin]
+default_postcall = "Plugin\View;Plugin\Output"
+
 [routing]
+; ------------------------------------------------
+; Examples of a route to
+; ------------------------------------------------
+simple_route[pattern] = "/"
+simple_route[controller] = "Example\Controllers\Basic"
+simple_route[method] = "index"
+
 ; ------------------------------------------------
 ; Example of a route with redirect               ;
 ; ------------------------------------------------
@@ -87,12 +98,3 @@ home_json[controller] = "Example\Controllers\Main"
 home_json[method] = "index"
 home_json[precall] = "Plugin\Cache"
 home_json[postcall] = "Plugin\Format;Plugin\Cache;Plugin\Output"
-
-; ------------------------------------------------
-; Examples of a route to
-; ------------------------------------------------
-home_json[pattern] = "/Example"
-home_json[controller] = "Example\Controllers\Main"
-home_json[method] = "index"
-home_json[precall] = "Plugin\Cache"
-home_json[postcall] = "Plugin\View;Plugin\Cache;Plugin\Output"
