--- a/app/etc/_routing.ini
+++ b/app/etc/_routing.ini
@@ -7,12 +7,5 @@
 ; route_name[app]: App to launch with this prefix
 ; route_name[path]: Path to application -- optional
 [route_apps]
-example_cli[type] = "cli"
-example_cli[host] = "localhost"
-example_cli[prefix] = "/Example"
-example_cli[app] = "Example"
-
-example_cgi[type] = "cgi"
-example_cgi[prefix] = "/Example"
-example_cgi[app] = "Example"
-example_cgi[path] = "/path/to/app"
+example[prefix] = "/"
+example[app] = "Example"
