add max_size directive to File component

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -117,8 +117,11 @@ route[] = client_test
 
 ; Configure File component
 ;
-; uploaded_file[path]: Path to move uploaded file
-; uploaded_file[ext]: Extension available
+; path: Path to move uploaded file
+; ext: Extension available
+; max_size: Max size authorized
 [file]
-uploaded_file[path] = ROOT_DIR"var/tmp/upload"
-uploaded_file[ext] = "png,jpeg,jpg"
+path = ROOT_DIR"var/tmp/upload"
+ext = "png,jpeg,jpg"
+max_size[png] = 1048576
+max_size[jpeg] = 1048576
