add the config route_error

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -2,6 +2,10 @@
 [globals]
 env = dev
 
+; Error http
+[route_error]
+404 = '/404'
+
 ; Set the class and the method of ExceptionHandler
 [exception_handler]
 class = Telelab\ExceptionHandler\ExceptionHandler
