routing app: Add documentation

--- a/app/etc/_routing.ini
+++ b/app/etc/_routing.ini
@@ -1,10 +1,11 @@
 ; List route apps
 ;
 ; route_name: Route name
-; route_name[type]: (CLI|CGI...) -- optional
-; route_name[host]: Hostname of application -- optional
 ; route_name[prefix]: Prefix of the route
 ; route_name[app]: App to launch with this prefix
+; route_name[type]: (CLI|CGI...) -- optional
+; route_name[host]: Hostname of application -- optional
+; route_name[host_pattern]: Pattern hostname of application -- optional
 ; route_name[path]: Path to application -- optional
 [route_apps]
 example[prefix] = "/"
