Added sections router_cache and conf_cache

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -4,7 +4,7 @@ env = dev
 
 ; Error http
 [route_error]
-404 = '/404'
+; 404 = '/404'
 
 ; Set the class and the method of ExceptionHandler
 [exception_handler]
@@ -62,6 +62,22 @@ memcache[ttl] = 5
 memcache[host] = 127.0.0.1
 memcache[port] = 11211
 
+; Configuration of Cache for Conf Component
+[conf_cache]
+enable = false
+driver = memcache
+memcache[ttl] = 300
+memcache[host] = 127.0.0.1
+memcache[port] = 11211
+
+; Configuration of Cache for Router Component
+[router_cache]
+enable = false
+driver = memcache
+memcache[ttl] = 300
+memcache[host] = 127.0.0.1
+memcache[port] = 11211
+
 ; Configuration Logger
 ;
 ; enable: (true|false) Enable logger
@@ -73,17 +89,19 @@ memcache[port] = 11211
 [logger]
 enable = true
 driver = file
-output = true
+output = false
 log_level = DEBUG
 file[file] = ROOT_DIR"var/log/core.log"
 
 ; Configuration View
 ;
-; driver: (smarty) Driver used
+; driver: (php|smarty) Driver used
 ; default_template: Default template for fetch and display
 ;
 ; smarty[template_dir]: (string )Directory to search templates
 ; smarty[compile_dir]: (string) Directory to compile templates
+;
+; php[template_dir]: (string )Directory to search templates
 [view]
 driver = smarty
 default_template = "main.tpl"
