create installation script

--- a/app/etc/_routing.ini
+++ b/app/etc/_routing.ini
@@ -9,4 +9,4 @@
 ; route_name[path]: Path to application -- optional
 [route_apps]
 example[prefix] = "/"
-example[app] = "Example"
+example[app] = "{{app_name}}"
