Modify default template of a new application

--- a/bin/tpl_app/routing.ini
+++ b/bin/tpl_app/routing.ini
@@ -6,4 +6,4 @@ home[pattern] = "/"
 home[controller] = "{{app_name}}\Controllers\Main"
 home[method] = "index"
 home[precall] = ""
-home[postcall] = "Plugin\View;Plugin\Output"
+home[postcall] = "Plugin\HydrateView;Plugin\View;Plugin\Output"
