logger: Added the directive callback

--- a/app/etc/_app.ini
+++ b/app/etc/_app.ini
@@ -86,6 +86,7 @@ memcache[port] = 11211
 ; log_level: (DEBUG|INFO|ERROR|CRIT) Write message if is more than log
 ;
 ; file[file]: File to write log
+; callback[(DEBUG|INFO|ERROR|CRIT)]: Method or function to call on this event
 [logger]
 enable = true
 driver = file
