--- a/bin/tpl_app/config.ini
+++ b/bin/tpl_app/config.ini
@@ -82,6 +82,7 @@
 ; output = false
 ; log_level = DEBUG
 ; file[file] = ROOT_DIR"var/log/core.log"
+; callback[(DEBUG|INFO|ERROR|CRIT)]: Method or function to call on this event
 
 ; Configuration View
 ;
