Router: removing preg_quote

--- a/app/etc/_routing.ini
+++ b/app/etc/_routing.ini
@@ -8,5 +8,5 @@
 ; route_name[host_pattern]: Pattern hostname of application -- optional
 ; route_name[path]: Path to application -- optional
 [route_apps]
-example[prefix] = "/"
+example[prefix] = "\/"
 example[app] = "{{app_name}}"
