Apply PSR-0 for file name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "autoload": {
+        "psr-0": {
+            "Telelab\\": "core"
+        }
     },
     "require": {
         "monolog/monolog": "1.2.*",
