--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "name": "telelab/telelab",
+    "php": ">=5.3.0",
+    "version": "1.0.0",
     "autoload": {
         "psr-0": {
             "Telelab\\": "core"
