--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "version": "1.0.0",
     "autoload": {
         "psr-0": {
-            "Telelab\\": "core"
+            "Telelab\\": "core",
+			"Plugin\\": "core"
         }
     },
     "require": {
