--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,14 @@
 {
-    "name": "wise/wise",
+    "name"       : "wise/wise",
+    "description": "The Wise Framework",
+    "type"       : "library",
     "php": ">=5.3.0",
     "version": "1.0.0",
-    "autoload": {
-        "psr-0": {
-            "Wise\\": "core",
-			"Plugin\\": "core"
+    "minimum-stability": "dev",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "git@github.com:GuillaumeDievart/Wise.git"
         }
-    },
-    "require": {
-        "smarty/smarty": "dev-master",
-        "twig/twig":"1.*"
-    }
+    ]
 }
