--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,21 @@
     "type"       : "library",
     "php": ">=5.3.0",
     "version": "1.0.0",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "repositories": [
         {
             "type": "vcs",
             "url":  "git@github.com:GuillaumeDievart/Wise.git"
         }
-    ]
+    ],
+    "require": {
+        "monolog/monolog": "1.2.*",
+        "smarty/smarty": "dev-master",
+        "twig/twig":"1.*"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.0"
+        }
+    }
 }
