--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,12 @@
 {
-    "name"       : "wise/wise",
+    "name"       : "wise",
     "description": "The Wise Framework",
     "type"       : "library",
     "php": ">=5.3.0",
     "version": "1.0.0",
-    "minimum-stability": "stable",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url":  "git@github.com:GuillaumeDievart/Wise.git"
-        }
-    ],
+    "autoload": {
+        "psr-0": { "": "." }
+    },
     "require": {
         "monolog/monolog": "1.2.*",
         "smarty/smarty": "dev-master",
