--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "php": ">=5.3.0",
     "version": "1.0.0",
     "autoload": {
-        "psr-0": { "": "." }
+        "psr-0": {"Wise": "core/"}
     },
     "require": {
         "monolog/monolog": "1.2.*",
