--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "twig/twig":"1.*"
+        "twig/twig":"1.*",
+        "monolog/monolog":"~1.5"
     }
 }
