--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ php:
   - 5.5
   - 5.4
   - 5.3
-before_script: wget http://downloads.atoum.org/nightly/mageekguy.atoum.phar
+before_script: 
+  - composer install
+  - wget http://downloads.atoum.org/nightly/mageekguy.atoum.phar
 script: php mageekguy.atoum.phar --bf bootstrap.php --directories ./tests/units
